gbf-experiments/tests/snapshots/report_emitter_s2__report_emitter__pass_with_distill_warn.snap
---
source: gbf-experiments/tests/report_emitter_s2.rs
expression: emitted.report.body
---
# S2 Report

## Pre-registered predictions

H2 ternary-full gap remains <= 0.5 bpc.

## Observed

All five seeds completed for all three report build kinds.

| build_kind | seed | completion | checkpoints | phase_log | score | distill_log |
| --- | --- | --- | --- | --- | --- | --- |
| s2-ternary-full | 0 | Completed | A=sha256:1414141414141414141414141414141414141414141414141414141414141414 B=sha256:1515151515151515151515151515151515151515151515151515151515151515 C=sha256:1616161616161616161616161616161616161616161616161616161616161616 final=sha256:1717171717171717171717171717171717171717171717171717171717171717 | sha256:1818181818181818181818181818181818181818181818181818181818181818 | sha256:1919191919191919191919191919191919191919191919191919191919191919 | sha256:1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a |
| s2-ternary-full | 1 | Completed | A=sha256:1515151515151515151515151515151515151515151515151515151515151515 B=sha256:1616161616161616161616161616161616161616161616161616161616161616 C=sha256:1717171717171717171717171717171717171717171717171717171717171717 final=sha256:1818181818181818181818181818181818181818181818181818181818181818 | sha256:1919191919191919191919191919191919191919191919191919191919191919 | sha256:1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a | sha256:1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b |
| s2-ternary-full | 2 | Completed | A=sha256:1616161616161616161616161616161616161616161616161616161616161616 B=sha256:1717171717171717171717171717171717171717171717171717171717171717 C=sha256:1818181818181818181818181818181818181818181818181818181818181818 final=sha256:1919191919191919191919191919191919191919191919191919191919191919 | sha256:1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a | sha256:1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b | sha256:1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c |
| s2-ternary-full | 3 | Completed | A=sha256:1717171717171717171717171717171717171717171717171717171717171717 B=sha256:1818181818181818181818181818181818181818181818181818181818181818 C=sha256:1919191919191919191919191919191919191919191919191919191919191919 final=sha256:1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a | sha256:1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b | sha256:1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c | sha256:1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d |
| s2-ternary-full | 4 | Completed | A=sha256:1818181818181818181818181818181818181818181818181818181818181818 B=sha256:1919191919191919191919191919191919191919191919191919191919191919 C=sha256:1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a final=sha256:1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b | sha256:1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c | sha256:1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d | sha256:1e1e1e1e1e1e1e1e1e1e1e1e1e1e1e1e1e1e1e1e1e1e1e1e1e1e1e1e1e1e1e1e |
| s2-fp-full | 0 | Completed | A=sha256:2828282828282828282828282828282828282828282828282828282828282828 B=sha256:2929292929292929292929292929292929292929292929292929292929292929 C=sha256:2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a final=sha256:2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b | sha256:2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c | sha256:2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d | sha256:2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e |
| s2-fp-full | 1 | Completed | A=sha256:2929292929292929292929292929292929292929292929292929292929292929 B=sha256:2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a C=sha256:2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b final=sha256:2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c | sha256:2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d | sha256:2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e | sha256:2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f |
| s2-fp-full | 2 | Completed | A=sha256:2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a B=sha256:2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b C=sha256:2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c final=sha256:2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d | sha256:2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e | sha256:2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f | sha256:3030303030303030303030303030303030303030303030303030303030303030 |
| s2-fp-full | 3 | Completed | A=sha256:2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b B=sha256:2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c C=sha256:2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d final=sha256:2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e | sha256:2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f | sha256:3030303030303030303030303030303030303030303030303030303030303030 | sha256:3131313131313131313131313131313131313131313131313131313131313131 |
| s2-fp-full | 4 | Completed | A=sha256:2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c B=sha256:2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d C=sha256:2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e final=sha256:2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f | sha256:3030303030303030303030303030303030303030303030303030303030303030 | sha256:3131313131313131313131313131313131313131313131313131313131313131 | sha256:3232323232323232323232323232323232323232323232323232323232323232 |
| s2-ternary-nodistill | 0 | Completed | A=sha256:3c3c3c3c3c3c3c3c3c3c3c3c3c3c3c3c3c3c3c3c3c3c3c3c3c3c3c3c3c3c3c3c B=sha256:3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d C=sha256:3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e final=sha256:3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f | sha256:4040404040404040404040404040404040404040404040404040404040404040 | sha256:4141414141414141414141414141414141414141414141414141414141414141 | null |
| s2-ternary-nodistill | 1 | Completed | A=sha256:3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d B=sha256:3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e C=sha256:3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f final=sha256:4040404040404040404040404040404040404040404040404040404040404040 | sha256:4141414141414141414141414141414141414141414141414141414141414141 | sha256:4242424242424242424242424242424242424242424242424242424242424242 | null |
| s2-ternary-nodistill | 2 | Completed | A=sha256:3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e B=sha256:3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f C=sha256:4040404040404040404040404040404040404040404040404040404040404040 final=sha256:4141414141414141414141414141414141414141414141414141414141414141 | sha256:4242424242424242424242424242424242424242424242424242424242424242 | sha256:4343434343434343434343434343434343434343434343434343434343434343 | null |
| s2-ternary-nodistill | 3 | Completed | A=sha256:3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f B=sha256:4040404040404040404040404040404040404040404040404040404040404040 C=sha256:4141414141414141414141414141414141414141414141414141414141414141 final=sha256:4242424242424242424242424242424242424242424242424242424242424242 | sha256:4343434343434343434343434343434343434343434343434343434343434343 | sha256:4444444444444444444444444444444444444444444444444444444444444444 | null |
| s2-ternary-nodistill | 4 | Completed | A=sha256:4040404040404040404040404040404040404040404040404040404040404040 B=sha256:4141414141414141414141414141414141414141414141414141414141414141 C=sha256:4242424242424242424242424242424242424242424242424242424242424242 final=sha256:4343434343434343434343434343434343434343434343434343434343434343 | sha256:4444444444444444444444444444444444444444444444444444444444444444 | sha256:4545454545454545454545454545454545454545454545454545454545454545 | null |

## Hypothesis verdicts

| hypothesis | status |
| --- | --- |
| H1 | Confirmed |
| H2 | Confirmed |
| H3 | Refuted |
| H4 | Confirmed |
| H5 | Confirmed |
| H6 | Confirmed |

## Falsification analysis

F1 through F6 broken-S2 controls did not pass.

## Surprises

None.

## Decision

`ProceedToS3-with-distill-review` from `Pass-with-distill-warn`. Closure candidate satisfies all R-S2 validators.

## Reproducibility statement

- command: `gbf s2 replay-full --fixture tiny`
- pass_version_S2: `0.1.0`
- manifests: tiny fixture manifests and S2 environment hash.
